# smart-bulb

./: CMakeLists.txt  README.md  flash.sh  partitions.csv  sdkconfig.defaults
controller/: index.html  script.js  style.css
main/: CMakeLists.txt  app_main.c  credentials.h  credentials_template.h  led_driver.c  led_driver.h  web_server.cpp  wifi.c
